Add playlists handles
